--- a/package.json
+++ b/package.json
@@ -12,25 +12,29 @@
     "validate": "node scripts/validate.js",
     "normalize": "node scripts/normalize.js",
     "render": "node scripts/render.js",
-    "drift-detect": "node scripts/drift-detect.js"
+    "drift-detect": "node scripts/drift-detect.js",
+    "export": "node scripts/export.js",
+    "export:auto": "node scripts/auto-export.js run",
+    "export:scheduler": "node scripts/auto-export.js start"
   },
   "dependencies": {
-    "aws-sdk": "^2.1400.0",
     "aws-cdk-lib": "^2.100.0",
+    "aws-sdk": "^2.1400.0",
+    "commander": "^11.0.0",
     "constructs": "^10.3.0",
-    "yaml": "^2.3.2",
+    "fs-extra": "^11.1.1",
     "joi": "^17.9.2",
     "lodash": "^4.17.21",
-    "fs-extra": "^11.1.1",
-    "commander": "^11.0.0"
+    "node-cron": "^3.0.3",
+    "yaml": "^2.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
-    "typescript": "^5.1.6",
-    "jest": "^29.6.1",
-    "eslint": "^8.45.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0"
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "jest": "^29.6.1",
+    "typescript": "^5.1.6"
   },
   "keywords": [
     "amazon-connect",
